--- a/components/Information.css
+++ b/components/Information.css
@@ -1,10 +1,13 @@
 .user {
 	margin: 0 auto;
-	padding: 2rem;
+	padding: 2rem 4rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .user-img {
-	width: 100%;
+	width: 80%;
 	border-radius: 4px;
 }
 
