--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .app {
 	margin: 2rem auto;
-	padding: 4rem;
-	max-width: 300px;
+	max-width: 400px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	background-color: #1a1b21;
 	color: #fff;
+	border-radius: 10px;
 }
